Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -189,13 +189,13 @@
        "'Ceo'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"Ceo\" # 'CEO'.upper"
+    "\"Ceo\" # 'CEO'.upper\""
    ]
   },
   {
